Ajout de la dépendance file system

--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "client" : "cd .. && cd Front-End && npm start",
+    "client": "cd .. && cd Front-End && npm start",
     "start": "concurrently \"npm run dev\" \"npm run client\""
   },
   "author": "",
@@ -17,6 +17,7 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "file-system": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
