--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -11,6 +11,7 @@
     "form-data": "^3.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
