--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ilyass-app",
+  "name": "shallwedance",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
