--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "client": "cd client && npm start",
-    "start": "concurrently \"npm run dev\" \"npm run client\""
+    "start": "concurrently \"npm run dev\" \"npm run client\"",
+    "heroku-prebuild": "npm install --production=false"
   },
   "author": "",
   "license": "ISC",
