--- a/client/.env
+++ b/client/.env
@@ -1,11 +1,11 @@
-REACT_APP_API_URL_EVENT='http://localhost:3001/api/event/'
-REACT_APP_API_URL_TYPE='http://localhost:3001/api/type/'
-REACT_APP_API_URL_PUBLICATION='http://localhost:3001/api/publication/'
-REACT_APP_API_URL_USER='http://localhost:3001/api/user/'
-REACT_APP_API_URL_GROUPE='http://localhost:3001/api/groupe/'
-REACT_APP_API_URL_COMMENT='http://localhost:3001/api/comment/'
-REACT_APP_API_URL_NOTIFICATION='http://localhost:3001/api/notification/'
-REACT_APP_API_URL_RATE='http://localhost:3001/api/rate/'
+REACT_APP_API_URL_EVENT='/api/event/'
+REACT_APP_API_URL_TYPE='/api/type/'
+REACT_APP_API_URL_PUBLICATION='/api/publication/'
+REACT_APP_API_URL_USER='/api/user/'
+REACT_APP_API_URL_GROUPE='/api/groupe/'
+REACT_APP_API_URL_COMMENT='/api/comment/'
+REACT_APP_API_URL_NOTIFICATION='/api/notification/'
+REACT_APP_API_URL_RATE='/api/rate/'
 
 
 
