--- a/client/.env
+++ b/client/.env
@@ -1,11 +1,11 @@
-REACT_APP_API_URL_EVENT='https://shallwedancevac.herokuapp.com/api/event/'
-REACT_APP_API_URL_TYPE='https://shallwedancevac.herokuapp.com/api/type/'
-REACT_APP_API_URL_PUBLICATION='https://shallwedancevac.herokuapp.com/api/publication/'
-REACT_APP_API_URL_USER='https://shallwedancevac.herokuapp.com/api/user/'
-REACT_APP_API_URL_GROUPE='https://shallwedancevac.herokuapp.com/api/groupe/'
-REACT_APP_API_URL_COMMENT='https://shallwedancevac.herokuapp.com/api/comment/'
-REACT_APP_API_URL_NOTIFICATION='https://shallwedancevac.herokuapp.com/api/notification/'
-REACT_APP_API_URL_RATE='https://shallwedancevac.herokuapp.com/api/rate/'
+REACT_APP_API_URL_EVENT='/api/event/'
+REACT_APP_API_URL_TYPE='/api/type/'
+REACT_APP_API_URL_PUBLICATION='/api/publication/'
+REACT_APP_API_URL_USER='/api/user/'
+REACT_APP_API_URL_GROUPE='/api/groupe/'
+REACT_APP_API_URL_COMMENT='/api/comment/'
+REACT_APP_API_URL_NOTIFICATION='/api/notification/'
+REACT_APP_API_URL_RATE='/api/rate/'
 
 
 
